fixed top nav + blog spacing issue

--- a/wp-content/themes/delivering-happiness/assets/sass/global/_blog.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_blog.scss
@@ -90,7 +90,7 @@
                 padding-left: 0px;
             }
             @extend %pull-left;
-            width: 400px;
+            width: 605px;
             padding-left: 18px;
             p {
                 @extend %pharagraph-level-5;
